--- a/LateralityFriday.html
+++ b/LateralityFriday.html
@@ -16,7 +16,7 @@ class: middle, right, title-slide
 # From observed laterality to latent hemispheric differences
 ## Revisiting the inference problem
 ### Øystein Sørensen
-### Laterality Friday; May 30, 2021
+### Laterality Friday; April 30, 2021
 
 ---
 
@@ -45,13 +45,15 @@ class: middle, center
   
   - Inference: Left/right dominance for language processing
   
---
+---
+
+# Background
 
 - Problem: Most people are left dominant.
 
 - Satz (1977) showed, based on then available data from sodium-amytal tests:
 
-  - Seeing that a person has a left-ear advantage increases the probability that the person is right dominant from 0.05 to 0.10.
+  - Seeing that a person has a left-ear advantage increases the probability that the person is right dominant for language processing from 0.05 to 0.10.
   
   - Seeing a right-ear advantage increases the probability of left dominance from 0.95 to 0.97.
 
@@ -64,11 +66,15 @@ Satz, P. (1977). Laterality Tests: An Inferential Problem. Cortex, 13(2), 208–
 
 # Background
 
-- Question: Do Satz' conclusions still hold, our can we do something better?
+- Question:
+
+  - Do Satz' conclusions still hold, our can we do something better?
+  
+--
 
 - Some opportunities:
 
-  - Dichotic listening experiments given a continuous index, e.g. between -100 and 100, rather than simply left/right.
+  - Dichotic listening experiments giving a continuous index, e.g. between -100 and 100, rather than simply left/right.
 
   - Can repeated measurements of the same subject give more reliable conclusions?
 
@@ -88,6 +94,10 @@ class: inverse, middle, center
 
 - Let `\(p(\alpha)\)` denote the probability that a given person in the population has hemispheric dominance `\(\alpha\)`.
 
+  - For example, `\(\alpha\)` takes the value 'left' or 'non-left'.
+  
+--
+
 - In Carey and Johnstone (2014), we find, for right-handers:
 
   - Probability of left dominance for language processing is `\(p(\alpha = \text{left}) = 0.87\)`
@@ -105,7 +115,7 @@ Carey, D. P., &amp; Johnstone, L. T. (2014). Quantifying cerebral asymmetries fo
 # Component 2: Conditional probability
 
 .pull-left[
-- Let `\(p(x|\alpha)\)` denote the conditional probability of observing a dichotic listening score `\(x\)` for a person with hemispheric dominance `\(\alpha\)`.
+- Let `\(p(x|\alpha)\)` denote the conditional probability of observing a dichotic listening score `\(x\)` between -100 and 100 for a person with hemispheric dominance `\(\alpha\)`.
 
 - In van der Haegen et al. (2013) we find:
 
@@ -113,9 +123,12 @@ Carey, D. P., &amp; Johnstone, L. T. (2014). Quantifying cerebral asymmetries fo
   
   - With right dominance, mean of `\(x\)` is -24.
 
-- Classical test theory: Assume measurements `\(x\)` are normally distributed around the mean for each group.
+- Classical test theory:
+
+  - Assume measurements `\(x\)` are normally distributed around the mean for each group.
 
 ]
+--
 .pull-right[
 
 
@@ -133,6 +146,11 @@ Van der Haegen, L., Westerhausen, R., Hugdahl, K., &amp; Brysbaert, M. (2013). S
 - Bayes' theorem gives us a way to compute the probability of hemispheric dominance `\(\alpha\)` given a prior distribution `\(p(\alpha)\)` and a condition probability `\(p(x|\alpha)\)`.
 
 `$$p(\alpha | x) = \frac{p(x | \alpha) p(\alpha)}{p(x | \alpha = \text{left}) p(\alpha = \text{left}) + p(x | \alpha = \text{non-left}) p(\alpha = \text{non-left})}$$`
+
+
+
+
+--
 
 - To summarize:
 
@@ -226,10 +244,10 @@ class: inverse, middle, center
 
 - Data from Karlsson et al. (2019): 871 participants, each with three perceptual laterality measures.
 
-- The table shows the effect of using only the first measurement ($n=1$), the first and second ($n=2$), and all ($n=3$).
+- The table shows the effect of using only the first measurement (n=1), the first and second (n=2), and all (n=3).
 
 &lt;center&gt;
-&lt;img src="figures/tab3.png", height=200&gt;
+&lt;img src="figures/tab3.png", height=150&gt;
 &lt;/center&gt;
 
 &lt;small&gt;
@@ -313,6 +331,13 @@ class: inverse, middle, center
 
 - Using multiple measurement paradigms is also possible, and we show this in Appendix 3. Again, the problem is points 1 and 2 above.
 
+
+---
+
+# Validation
+
+- It would be very useful to validate the predictions on an independent dataset with known ground truth. Unfortunately, such data do not seem easily available.
+
 ---
 
 # App
@@ -358,10 +383,6 @@ example_data1
 
 ```r
 predict_dominance(example_data1)
-```
-
-```
-## No ID column in data, assuming one subject per row.
 ```
 
 ```
